@@ -51,6 +51,7 @@ if { [istarget m68*-*-*] || [istarget fido*-*-*] } then {
     run_dump_test mcf-mov3q
     run_dump_test mcf-movsr
     run_dump_test mode5
+    run_dump_test mode5 "{name {cf}} {as {-mcpu=5200}}"
     run_dump_test mcf-mac
     run_dump_test mcf-emac
     run_dump_test mcf-coproc
