@@ -1,3 +1,7 @@
+2011-09-07  Andreas Schwab  <schwab@linux-m68k.org>
+
+	* m68k-opc.c: Use "y" in moveml pattern for mcfisa_a.
+
 2011-08-26  Nick Clifton  <nickc@redhat.com>
 
 	* po/es.po: Updated Spanish translation.
