@@ -1,3 +1,9 @@
+2011-09-07  Andreas Schwab  <schwab@linux-m68k.org>
+
+	* gas/m68k/all.exp: Run "mode5" test also with -mcpu=5200.
+	* gas/m68k/mode5.s: Add moveml testcases.
+	* gas/m68k/mode5.d: Update.
+
 2011-09-05  Richard Sandiford  <rdsandiford@googlemail.com>
 
 	* gas/mips/loc-swap-2.s, gas/mips/loc-swap-2.d,
